syntax = "proto3";
package mycel.furnace.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "mycel/furnace/v1beta1/burn_amount.proto";
import "mycel/furnace/v1beta1/epoch_burn_config.proto";
import "mycel/furnace/v1beta1/params.proto";

option go_package = "github.com/mycel-domain/mycel/x/furnace/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/mycel/furnace/v1beta1/params";
  }

  // Queries a EpochBurnConfig by index.
  rpc EpochBurnConfig(QueryGetEpochBurnConfigRequest)
      returns (QueryGetEpochBurnConfigResponse) {
    option (google.api.http).get =
        "/mycel/furnace/v1beta1/epoch_burn_config";
  }

  // Queries a list of BurnAmount items.
  rpc BurnAmount(QueryGetBurnAmountRequest)
      returns (QueryGetBurnAmountResponse) {
    option (google.api.http).get =
        "/mycel/furnace/v1beta1/burn_amount/{index}";
  }
  rpc BurnAmountAll(QueryAllBurnAmountRequest)
      returns (QueryAllBurnAmountResponse) {
    option (google.api.http).get =
        "/mycel/furnace/v1beta1/burn_amount";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

message QueryGetEpochBurnConfigRequest {}

message QueryGetEpochBurnConfigResponse {
  EpochBurnConfig epoch_burn_config = 1 [ (gogoproto.nullable) = false ];
}

message QueryGetBurnAmountRequest { uint64 index = 1; }

message QueryGetBurnAmountResponse {
  BurnAmount burn_amount = 1 [ (gogoproto.nullable) = false ];
}

message QueryAllBurnAmountRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllBurnAmountResponse {
  repeated BurnAmount burn_amount = 1 [ (gogoproto.nullable) = false ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
